[project]
name = "agentic-rag"
version = "0.1.0"
description = "Agentic RAG"
authors = [
    { name = "Marc Fabian Mezger", email = "marc.mezger@googlemail.com" }
]
dependencies = [
    "langgraph>=0.1.16",
    "loguru>=0.7.2",
    "lancedb>=0.11.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/agentic_rag"]
